--- a/style.css
+++ b/style.css
@@ -69,6 +69,12 @@ section#homepage .header{
     transition: 0.3s;
     text-decoration: none;
     color: grey;
+    cursor: pointer;
+}
+
+.our-register p #open-form:hover{
+    color: rgb(65, 5, 107);
+
 }
 
 .our-register p a:hover{
@@ -100,6 +106,7 @@ section#homepage .header{
 /* navbar */
 .navbar{
     height: 100px;
+    background-color: rgb(65, 5, 107);
 }
 
 .fixed{
@@ -119,6 +126,10 @@ section#homepage .header{
     font: 600 17px sans-serif;
 }
 
+.nav-item .nav-link.active{
+    transform: scale(1.2);
+}
+
 .navbar-nav .nav-link:hover{
     color: white;
     transform: scale(1.2);
@@ -132,40 +143,156 @@ section#homepage .header{
 
 /* carausel */
 
-/* html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-} */
-
 .swiper {
   width: 100%;
   height: 100vh;
 }
 
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
   background: #fff;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  padding: 0 200px;
+  color: white;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.swiper-slide h1{
+    font: 500 70px sans-serif;
+    width: 50%;
+}
+
+.swiper-slide p{
+    font: 500 30px sans-serif;
+    width: 95%;
+    margin: 30px 0;
+    line-height: 40px;
+}
+
+.swiper-slide .btns{
+    width: 46%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.swiper-slide .btns .btn{
+    background-color: white;
+    text-transform: uppercase;
+    padding: 15px 40px;
+    font: 500 20px sans-serif;
+    color: black;
+    border: 2px solid white;
+    transition: 0.5s;
+}
+
+.swiper-slide .btns .btn:hover{
+    background-color: transparent;
+    color: white;
+}
+
+.swiper-slide:nth-child(1){
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(img/home1.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.swiper-slide:nth-child(2){
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(img/home1.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#about{
+    height: 100vh;
+}
+
+.swiper-button-prev::after{
+    content: "";
+}
+
+.swiper-button-next::after{
+    content: "";
+}
+
+.swiper-button-prev i{
+    font-size: 70px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    margin-left: 40px;
+}
+
+.swiper-button-next i{
+    font-size: 70px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    margin-right: 40px;
+}
+
+/* form */
+section#homepage #register-form{
+
+    position: fixed;
+    height: 100vh;
+    background-color: white;
+    width: 100%;
+    top: 0;
+    z-index: 1111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+#register-form form{
+    width: 500px;
+    background-color: black;
+    padding: 30px;
+    color: white;
+    border-radius: 15px;
+    box-shadow: 0 0 10px black;
+    position: relative;
+}
+
+#register-form form input{
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    color: white;
+}
+
+#register-form form label{
+    font: 700 17px sans-serif;
+}
+
+#register-form form input:focus{
+    box-shadow: none;
+}
+
+#register-form form button{
+    font: bold 17px sans-serif;
+}
+
+#register-form #square{
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#register-form #square:hover{
+    background-color: rgb(193, 3, 3);
 }
 
 
@@ -187,6 +314,50 @@ body {
     .navbar .menu{
         padding: 0 30px;
     }
+
+    .swiper-slide {
+        padding: 0 30px;
+      }
+
+    .swiper-slide h1{
+        font: 500 40px sans-serif;
+        width: 100%;
+    }
+    
+    .swiper-slide p{
+        font: 500 17px sans-serif;
+        width: 100%;
+    }
+
+    .swiper-button-prev i{
+        font-size: 30px;
+        margin-left: 0;
+    }
+    
+    .swiper-button-next i{
+        font-size: 30px;
+        margin-right: 0;
+    }
+
+    .swiper-slide .btns .btn{
+        padding: 5px 12px;
+        font: 500 16px sans-serif;
+    }
+
+    .swiper-slide .btns{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .swiper {
+        height: 50vh;
+    }
+
+    #register-form form{
+        width: 300px;
+        
+    }
 }
 
 
@@ -199,6 +370,45 @@ body {
     .navbar .menu{
        padding: 0;
     }
+
+    .swiper-slide {
+        padding: 0 90px;
+      }
+
+    .swiper-slide h1{
+        font: 500 50px sans-serif;
+        width: 100%;
+    }
+    
+    .swiper-slide p{
+        font: 500 20px sans-serif;
+        width: 100%;
+    }
+
+    .swiper-button-prev i{
+        font-size: 40px;
+        margin-left: 30px;
+    }
+    
+    .swiper-button-next i{
+        font-size: 40px;
+        margin-right: 30px;
+    }
+
+    .swiper-slide .btns .btn{
+        padding: 10px 15px;
+        font: 500 16px sans-serif;
+    }
+
+    .swiper-slide .btns{
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .swiper {
+        height: 100vh;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px){
@@ -210,4 +420,114 @@ body {
     .navbar .menu{
         padding: 0;
     }
+
+    .swiper-slide {
+        padding: 0 90px;
+      }
+
+    .swiper-slide h1{
+        font: 500 60px sans-serif;
+        width: 80%;
+    }
+    
+    .swiper-slide p{
+        font: 500 22px sans-serif;
+        width: 100%;
+    }
+
+    .swiper-button-prev i{
+        font-size: 45px;
+        margin-left: 30px;
+    }
+    
+    .swiper-button-next i{
+        font-size: 45px;
+        margin-right: 30px;
+    }
+
+    .swiper-slide .btns .btn{
+        padding: 10px 15px;
+        font: 500 16px sans-serif;
+    }
+
+    .swiper-slide .btns{
+        width: 55%;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (min-width:992px) and (max-width: 1200px){
+    .swiper-slide {
+        padding: 0 100px;
+      }
+
+    .swiper-slide h1{
+        font: 500 63px sans-serif;
+        width: 63%;
+    }
+    
+    .swiper-slide p{
+        font: 500 23px sans-serif;
+        width: 80%;
+    }
+
+    .swiper-button-prev i{
+        font-size: 50px;
+        margin-left: 30px;
+    }
+    
+    .swiper-button-next i{
+        font-size: 50px;
+        margin-right: 30px;
+    }
+
+    .swiper-slide .btns .btn{
+        padding: 13px 20px;
+        font: 500 16px sans-serif;
+    }
+
+    .swiper-slide .btns{
+        width: 43%;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (min-width:1200px) and (max-width: 1400px){
+    .swiper-slide {
+        padding: 0 100px;
+      }
+
+    .swiper-slide h1{
+        font: 500 65px sans-serif;
+        width: 60%;
+    }
+    
+    .swiper-slide p{
+        font: 500 25px sans-serif;
+        width: 75%;
+    }
+
+    .swiper-button-prev i{
+        font-size: 55px;
+        margin-left: 35px;
+    }
+    
+    .swiper-button-next i{
+        font-size: 55px;
+        margin-right: 35px;
+    }
+
+    .swiper-slide .btns .btn{
+        padding: 15px 25px;
+        font: 500 16px sans-serif;
+    }
+
+    .swiper-slide .btns{
+        width: 37%;
+        display: flex;
+        justify-content: space-between;
+    }
+
 }
