i just has come service part

--- a/style.css
+++ b/style.css
@@ -126,19 +126,25 @@ section#homepage .header{
     font: 600 17px sans-serif;
 }
 
-.nav-item .nav-link.active{
-    transform: scale(1.2);
+body .navbar .nav-item .nav-link.active{
+    color: red;
+    transform: scale(1.3);
+
 }
 
 .navbar-nav .nav-link:hover{
     color: white;
-    transform: scale(1.2);
+    transform: scale(1.3);
 }
 
 .navbar-nav{
     width: 65%;
     display: flex;
     justify-content: space-between;
+}
+
+.animate__animated .animate__slideInUp{
+    animation-duration: 3s;
 }
 
 /* carausel */
@@ -348,9 +354,131 @@ section#whatWeDo .what-cards .what-card p{
 }
 
 
+/* section#aboutUs */
+
+section#aboutUs{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section#aboutUs .about-text{
+    width: 50%;
+    margin-top: 50px;
+}
+
+section#aboutUs .about-text h3{
+    font: 600 40px sans-serif;
+    text-transform: capitalize;
+}
+
+section#aboutUs .about-text p{
+    font: 500 18px sans-serif;
+    color: grey;
+    line-height: 27px;
+    width: 83%;
+    margin: 30px 0;
+}
+
+section#aboutUs .about-image{
+    width: 50%;
+    position: relative;
+}
+
+section#aboutUs .about-image img{
+    width: 100%;
+    object-fit: cover;
+    box-shadow: 0 0 5px rgb(119, 114, 114);
+}
+
+section#aboutUs .about-image .square{
+    position: absolute;
+    border: 5px solid rgb(119, 114, 114);
+    top: 50px;
+    bottom: -50px;
+    right: 30px;
+    left: -30px;
+    z-index: -1;
+}
+
+section#aboutUs .about-text .btn{
+    background-color: rgb(65, 5, 107);
+    border-radius: 0;
+    color: white;
+    text-transform: uppercase;
+    padding: 13px 30px;
+    border: 2px solid rgb(65, 5, 107);
+    transition: 0.5s;
+    font-weight: 600;
+}
+
+section#aboutUs .about-text .btn:hover{
+    background-color: transparent;
+    color: rgb(65, 5, 107);
+}
+
+/* section#ourService */
+section#ourService{
+    width: 80%;
+    margin:  0 auto;
+    padding: 120px 0 80px 0;
+    text-align: center;
+}
+
+section#ourService h3:nth-child(1){
+    font: 600 40px sans-serif;
+    text-transform: capitalize;
+}
+
+section#ourService p{
+    font: 500 18px sans-serif;
+    width: 75%;
+    margin: 0 auto;
+    color: grey;
+}
+
+section#ourService .service-gallery{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 70px;
+    margin-top: 35px;
+
+}
+
+.service-gallery .s-card{
+    padding:  25px 6px;
+    transition: 0.5s;
+}
+
+.service-gallery .s-card:hover{
+    box-shadow: 0 0 10px black;
+}
+
+.service-gallery .s-card h3{
+    margin: 30px 0;
+}
+
+.service-gallery .s-card p{
+    width: 100%;
+    font-size: 19px;
+}
+
+.service-gallery .s-card a{
+    text-decoration: none;
+    font-size: 18px;
+    color: rgb(65, 5, 107);
+}
+
+
+
+
+
+
 @media screen and (min-width: 320px) and (max-width: 576px){
     section#homepage .header{
-        padding: 10px 30px;
+        padding: 8px 25px;
         display: block;
     }
 
@@ -415,7 +543,55 @@ section#whatWeDo .what-cards .what-card p{
     }
 
     section#whatWeDo .what-cards .what-card{
-        margin: 0 auto;
+        width: 260px;
+    }
+
+    section#aboutUs{
+        width: 80%;
+        display: block;
+    }
+
+    section#aboutUs .about-text{
+        width: 100%;
+        text-align: center;
+    }
+
+    section#aboutUs .about-text h3{
+        font: 600 30px sans-serif;
+        text-transform: capitalize;
+    }
+
+    section#aboutUs .about-text p{
+        width: 100%;
+    }
+
+    section#aboutUs .about-text .btn{
+        padding: 7px 20px;
+        font-weight: 500;
+    }
+
+    section#aboutUs .about-image{
+        width: 100%;
+        margin-top: 30px;
+        position: relative;
+    }
+    
+    section#aboutUs .about-image .square{
+        position: absolute;
+        top: 20px;
+        bottom: -20px;
+        right: 10px;
+        left: -10px;
+        z-index: -1;
+        border: 2px solid grey;
+    }
+
+    section#ourService .service-gallery{
+        display: block;
+    }
+
+    section#ourService .service-gallery .s-card{
+        margin-bottom: 40px;
     }
 }
 
@@ -485,6 +661,61 @@ section#whatWeDo .what-cards .what-card p{
         width: 300px;
         height: 290px;
     }
+
+    section#aboutUs{
+        width: 80%;
+        display: block;
+    }
+
+    section#aboutUs .about-text{
+        width: 100%;
+        text-align: center;
+    }
+
+    section#aboutUs .about-text h3{
+        font: 600 30px sans-serif;
+        text-transform: capitalize;
+    }
+
+    section#aboutUs .about-text p{
+        width: 100%;
+    }
+
+    section#aboutUs .about-text .btn{
+        padding: 7px 20px;
+        font-weight: 500;
+    }
+
+    section#aboutUs .about-image{
+        width: 100%;
+        margin-top: 30px;
+        position: relative;
+    }
+    
+    section#aboutUs .about-image .square{
+        position: absolute;
+        top: 30px;
+        bottom: -30px;
+        right: 20px;
+        left: -20px;
+        z-index: -1;
+        border: 3px solid grey;
+    }
+
+    .service-gallery .s-card{
+        padding:  20px 3px;
+        transition: 0.5s;
+    }
+
+    section#ourService .service-gallery{
+        display: block;
+    }
+
+    section#ourService .service-gallery .s-card{
+        margin-bottom: 40px;
+    }
+
+    /* ourService */
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px){
@@ -545,6 +776,18 @@ section#whatWeDo .what-cards .what-card p{
     section#whatWeDo .what-cards .what-card p{
         margin: 0;
     }
+    
+    section#aboutUs{
+        width: 90%;
+    }
+
+    section#ourService{
+        width: 90%;
+    }
+    section#ourService .service-gallery{
+        gap: 30px;
+    }
+
 }
 
 @media screen and (min-width:992px) and (max-width: 1200px){
