I have got a problem with team-part

--- a/style.css
+++ b/style.css
@@ -153,12 +153,12 @@ body .navbar .nav-item .nav-link.active{
 
 /* carausel */
 
-.swiper {
+.mySwiper {
   width: 100%;
   height: 100vh;
 }
 
-.swiper-slide {
+.mySwiper .swiper-slide {
   font-size: 18px;
   background: #fff;
   display: flex;
@@ -169,25 +169,25 @@ body .navbar .nav-item .nav-link.active{
   color: white;
 }
 
-.swiper-slide h1{
+.mySwiper .swiper-slide h1{
     font: 500 70px sans-serif;
     width: 50%;
 }
 
-.swiper-slide p{
+.mySwiper .swiper-slide p{
     font: 500 30px sans-serif;
     width: 95%;
     margin: 30px 0;
     line-height: 40px;
 }
 
-.swiper-slide .btns{
+.mySwiper .swiper-slide .btns{
     width: 46%;
     display: flex;
     justify-content: space-between;
 }
 
-.swiper-slide .btns .btn{
+.mySwiper .swiper-slide .btns .btn{
     background-color: white;
     text-transform: uppercase;
     padding: 15px 40px;
@@ -197,19 +197,19 @@ body .navbar .nav-item .nav-link.active{
     transition: 0.5s;
 }
 
-.swiper-slide .btns .btn:hover{
+.mySwiper .swiper-slide .btns .btn:hover{
     background-color: transparent;
     color: white;
 }
 
-.swiper-slide:nth-child(1){
+.mySwiper .swiper-slide:nth-child(1){
     background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(img/home1.avif);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
 
-.swiper-slide:nth-child(2){
+.mySwiper .swiper-slide:nth-child(2){
     background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(img/home1.webp);
     background-repeat: no-repeat;
     background-size: cover;
@@ -666,6 +666,129 @@ section#project .gallery-img{
     color: rgb(65, 5, 107);
 }
 
+/* section#ourTeam */
+section#ourTeam{
+    background-color: purple;
+    padding: 80px 0;
+}
+
+section#ourTeam h3{
+    color: white;
+    font: 600 40px sans-serif;
+    text-transform: capitalize;
+    width: 83%;
+    margin: 0 auto;
+}
+
+section#ourTeam .title-p{
+    color: white;
+    font: 500 18px sans-serif;
+    width: 83%;
+    margin: 15px auto 45px auto;
+}
+
+.box {
+    /* max-width: 1440px; */
+    display: flex;
+    height: 350px;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 83%;
+  }
+  /* .box .banner-swiper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: relative;
+  } */
+  .box .swiper-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+  .box .swiper-wrapper .prev-slide,
+  .box .swiper-wrapper .next-slide {
+    opacity: 0.4;
+  }
+  .box .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 350px;
+  }
+
+  .box .slide-image img {   
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .box .navigation {
+    display: block;
+    position: absolute;
+    width: 120px;
+    height: 56px;
+    z-index: 50;
+    bottom: 16px;
+    right: 236px;
+  }
+  .box .navigation .previous {
+    margin-right: 8px;
+  }
+  .box .navigation .previous,
+  .box .navigation .next {
+    width: 56px;
+    height: 56px;
+    background-color: #424142;
+  }
+  .box .navigation .previous i,
+  .box .navigation .next i {
+    color: white;
+    }
+
+.box .slide-image{
+    width: 100%;
+    display: block;
+    height: 100%;
+    position: relative;
+    border: 2px solid red;
+}
+
+.box .slide-image .text{
+    position: absolute;
+    bottom: -24px;
+    width: 100%;
+    color: white;
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    padding: 10px 15px;
+    transition: 0.5s;
+}
+
+.box .text p{
+    font: 600 22px sans-serif;
+    margin: 0 0 10px 0;
+}
+
+.box .text h6{
+    font: 500 13px sans-serif;
+    margin: 0 0 7px 0;
+}
+
+.box a{
+    text-decoration: none;
+    color: rgb(55, 0, 95);
+    font: 500 16px sans-serif;
+    cursor: pointer;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.box .slide-image:hover .text{
+    bottom: 0;
+}
+
+.box .slide-image:hover a{
+    opacity: 1;
+}
 
 
 
