I'm creating contact-part

--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ body .navbar .nav-item .nav-link.active{
     background-attachment: fixed;
 }
 
+
 section#about{
     height: 100vh;
 }
@@ -946,50 +947,158 @@ section#ourSponsors{
     background-color: rgb(55, 0, 95);
     color: white;
     padding: 80px 0;
+    
 }
 
-/* html,
-body {
-  position: relative;
-  height: 100%;
+section#ourSponsors .owl-theme{
+    margin: 0 auto;
+    width: 83%;
 }
 
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-} */
-
-.mySwiper5 {
-  width: 83%;
-  height: 100%;
-  display: flex;
-  align-items: center;
+section#ourSponsors .owl-theme .item{
+    width: 250px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.mySwiper5 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid red;
-}
-
-.mySwiper5 .swiper-slide img {
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
-  object-fit: cover;
-  
-}
-
-.mySwiper5 .swiper-slide .image{
+section#ourSponsors img{
     width: 150px;
+    height: 100px;
+    cursor: pointer;
 }
+
+/* section#Latestnews */
+
+section#Latestnews{
+    padding: 80px 0;
+    width: 83%;
+    margin: 0 auto;
+}
+
+section#Latestnews .title{
+    font: 700 38px sans-serif;
+    text-align: center;
+}
+
+section#Latestnews .title-p{
+    font: 500 18px sans-serif;
+    width: 80%;
+    margin: 30px auto 100px auto;
+    text-align: center;
+    line-height: 25px;
+}
+
+section#Latestnews .latest-cards{
+    display: flex;
+    justify-content: space-between;
+}
+
+section#Latestnews .latest-cards .late-card{
+    width: 32%;
+    height: 550px;
+}
+
+section#Latestnews .latest-cards .late-card:hover img{
+    transform: scaleY(1.1);
+    transition: 0.5s;
+}
+
+section#Latestnews .late-card .late-image{
+    height: 400px;
+    position: relative;
+}
+
+section#Latestnews .late-card .late-image .text{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-image: linear-gradient(rgba(96, 2, 104, 0.5),rgba(96, 2, 104, 0.5));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    transform: scale(0);
+}
+
+section#Latestnews .late-card:hover .late-image .text{
+    transform: scaleY(1.1);
+}
+
+section#Latestnews .late-card .late-image .text:hover{
+    transform: scaleY(1.1);
+}
+
+section#Latestnews .late-card .late-image .text i{
+    font-size: 30px;
+    color: white;
+}
+
+section#Latestnews .late-card .late-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+section#Latestnews .late-card .late-text{
+    height: 150px;
+    background-color: white;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+
+section#Latestnews .late-text h3{
+    font: 600 19px sans-serif;
+    font-style: italic;
+}
+
+section#Latestnews .late-text p{
+    font: 500 17px sans-serif;
+    margin: 0;
+}
+
+section#Latestnews .late-text p span{
+    color: rgb(55, 0, 95);
+}
+
+section#Latestnews .lateButton{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section#Latestnews .btn{
+    background-color: rgb(55, 0, 95);
+    color: white;
+    border-radius: 0;
+    text-transform: uppercase;
+    padding: 15px 30px;
+    font: bold 15px sans-serif;
+    border: 2px solid rgb(55, 0, 95);
+    transition: 0.5s;
+    margin-top: 30px;
+}
+
+section#Latestnews .btn:hover{
+    background-color: transparent;
+    color: rgb(55, 0, 95);
+}
+
+section#contact{
+    background-image: url(img/map.jpg);
+    padding: 100px 0;
+}
+
+
+
+
 
 
 
@@ -1015,16 +1124,16 @@ body {
         padding: 0 30px;
     }
 
-    .swiper-slide {
+    .mySwiper .swiper-slide {
         padding: 0 30px;
       }
 
-    .swiper-slide h1{
+      .mySwiper .swiper-slide h1{
         font: 500 40px sans-serif;
         width: 100%;
     }
     
-    .swiper-slide p{
+    .mySwiper .swiper-slide p{
         font: 500 17px sans-serif;
         width: 100%;
     }
@@ -1039,12 +1148,12 @@ body {
         margin-right: 0;
     }
 
-    .swiper-slide .btns .btn{
+    .mySwiper .swiper-slide .btns .btn{
         padding: 5px 12px;
         font: 500 16px sans-serif;
     }
 
-    .swiper-slide .btns{
+    .mySwiper .swiper-slide .btns{
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -1064,6 +1173,7 @@ body {
 
     section#whatWeDo .what-cards .what-card{
         width: 260px;
+        margin: 0 auto;
     }
 
     section#aboutUs{
@@ -1147,6 +1257,51 @@ body {
     section#ourPrice .our-cards .card{
         width: 100%;
     }
+
+    .mySwiper3 .swiper-slide h1{
+        font: 700 30px sans-serif;
+        margin: 10px 0;
+    }
+
+    .mySwiper3 .swiper-slide p{
+        font: 500 18px sans-serif;
+        color: grey;
+        width: 80%;
+        line-height: 24px;
+    }
+    
+    .mySwiper3 .swiper-slide h3{
+        font: 600 15px sans-serif;
+    }
+    
+    .mySwiper3 .swiper-slide h4{
+        font-size: 17px;
+        margin-bottom: 70px;
+    }
+
+    section#Latestnews .latest-cards{
+        display: block;
+        justify-content: space-between;
+    }
+
+    section#Latestnews .latest-cards .late-card{
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    section#Latestnews .late-text h3{
+        font: 600 17px sans-serif;
+        font-style: italic;
+    }
+    
+    section#Latestnews .late-text p{
+        font: 500 15px sans-serif;
+    }
+
+    section#Latestnews .btn{
+        margin-top: 10px;
+    }
+
 }
 
 
@@ -1160,21 +1315,21 @@ body {
        padding: 0;
     }
 
-    .swiper-slide {
+    .mySwiper .swiper-slide {
         padding: 0 90px;
       }
 
-    .swiper-slide h1{
+    .mySwiper .swiper-slide h1{
         font: 500 50px sans-serif;
         width: 100%;
     }
     
-    .swiper-slide p{
+    .mySwiper .swiper-slide p{
         font: 500 20px sans-serif;
         width: 100%;
     }
 
-    .swiper-button-prev i{
+    .mySwiper .swiper-button-prev i{
         font-size: 40px;
         margin-left: 30px;
     }
@@ -1189,7 +1344,7 @@ body {
         font: 500 16px sans-serif;
     }
 
-    .swiper-slide .btns{
+    .mySwiper .swiper-slide .btns{
         width: 80%;
         display: flex;
         justify-content: space-between;
@@ -1318,12 +1473,12 @@ body {
         padding: 0 90px;
       }
 
-    .swiper-slide h1{
+    .mySwiper .swiper-slide h1{
         font: 500 60px sans-serif;
         width: 80%;
     }
     
-    .swiper-slide p{
+    .mySwiper .swiper-slide p{
         font: 500 22px sans-serif;
         width: 100%;
     }
@@ -1338,13 +1493,13 @@ body {
         margin-right: 30px;
     }
 
-    .swiper-slide .btns .btn{
+    .mySwiper .swiper-slide .btns .btn{
         padding: 10px 15px;
         font: 500 16px sans-serif;
     }
 
-    .swiper-slide .btns{
-        width: 55%;
+    .mySwiper .swiper-slide .btns{
+        width: 70%;
         display: flex;
         justify-content: space-between;
     }
@@ -1397,19 +1552,38 @@ body {
         width: 100%;
     }
 
+    section#Latestnews .latest-cards{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 30px;
+    }
+
+    section#Latestnews .latest-cards .late-card{
+        width: 100%;
+    }
+
+    section#Latestnews .late-text h3{
+        font: 600 17px sans-serif;
+        font-style: italic;
+    }
+    
+    section#Latestnews .late-text p{
+        font: 500 15px sans-serif;
+    }
+
 }
 
 @media screen and (min-width:992px) and (max-width: 1200px){
-    .swiper-slide {
+    .mySwiper .swiper-slide {
         padding: 0 100px;
       }
 
-    .swiper-slide h1{
+    .mySwiper .swiper-slide h1{
         font: 500 63px sans-serif;
         width: 63%;
     }
     
-    .swiper-slide p{
+    .mySwiper .swiper-slide p{
         font: 500 23px sans-serif;
         width: 80%;
     }
@@ -1424,13 +1598,13 @@ body {
         margin-right: 30px;
     }
 
-    .swiper-slide .btns .btn{
+    .mySwiper .swiper-slide .btns .btn{
         padding: 13px 20px;
         font: 500 16px sans-serif;
     }
 
-    .swiper-slide .btns{
-        width: 43%;
+    .mySwiper .swiper-slide .btns{
+        width: 60%;
         display: flex;
         justify-content: space-between;
     }
