--- a/style.css
+++ b/style.css
@@ -1091,10 +1091,253 @@ section#Latestnews .btn:hover{
     color: rgb(55, 0, 95);
 }
 
+/* section#contact */
+
 section#contact{
-    background-image: url(img/map.jpg);
+    background-image: linear-gradient(rgba(55,0,95,0.5),rgba(55,0,95,0.5)), url(img/map.jpg);
     padding: 100px 0;
+    color: white;
 }
+
+section#contact .contact-title{
+    font: 700 38px sans-serif;
+    text-align: center;
+    text-transform: capitalize;
+}
+
+section#contact .title-p{
+    font: 500 18px sans-serif;
+    width: 80%;
+    margin: 30px auto 100px auto;
+    text-align: center;
+    line-height: 25px;
+}
+
+section#contact .contact-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 15px;
+}
+
+section#contact .contact-info .phone-info{
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+section#contact .contact-info .phone-info p{
+    margin:0 0 0 10px;
+}
+
+section#contact .contact-info .phone-email{
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+section#contact .contact-info .phone-email p{
+    margin:0 0 0 10px;
+}
+
+section#contact .contact-info .footer-icons{
+    display: flex;
+    justify-content: space-between;
+    width: 22%;
+    margin-top: 20px;
+}
+
+section#contact .contact-info .footer-icons i{
+    font-size: 16px;
+    cursor: pointer;
+}
+
+section#contact .contact-form{
+    overflow: auto;
+}
+
+section#contact .registr{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+
+section#contact .registr input{
+    padding: 15px;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-size: 17px;
+}
+
+section#contact form textarea{
+    margin-top: 20px;
+    outline: none;
+    border: none;
+    font-size: 17px;
+    padding: 20px;
+}
+
+section#contact form  button{
+    background-color: purple;
+    color: white;
+    cursor: pointer;
+    display: block;
+    border: none;
+    padding: 13px 30px;
+    font: 500 20px sans-serif;
+    border: 2px solid purple;
+    transition: 0.5s;
+}
+
+section#contact form  button:hover{
+    background-color: white;
+    color: purple;
+    border: 2px solid purple;
+}
+
+section#want{
+    padding: 80px 8%;
+    background: purple;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section#want h1{
+    font: 700 35px sans-serif;
+}
+
+section#want .btn{
+    padding: 17px 60px;
+    background-color: rgb(55, 0, 95);
+    color: white;
+    border-radius: 0;
+    font: 500 25px sans-serif;
+    transition: 0.5s;
+}
+
+section#want .btn:hover{
+    background-color: white;
+    color: rgb(55, 0, 95);
+}
+
+section#footer{
+    padding: 80px 8%;
+    background-color: black;
+    color: white;
+}
+
+section#footer p{
+    font: 500 18px sans-serif;
+}
+
+section#footer .footer1 p{
+    width: 60%;
+    line-height: 25px;
+    margin: 25px 0;
+}
+
+section#footer .footer1 img{
+    width: 120px;
+}
+
+section#footer .footer1 .footer-icons{
+    display: flex;
+    justify-content: space-between;
+    width: 42%;
+}
+
+section#footer .footer1 .footer-icons .square{
+    width: 30px;
+    height: 30px;
+    background-color: grey;
+    color: black;
+    cursor: pointer;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+}
+
+section#footer .footer1 .footer-icons .square:hover{
+    background-color: white;
+}
+
+section#footer .footer2 ul{
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+
+section#footer .footer2 li{
+    list-style: none;
+    transition: 0.5s;
+}
+
+section#footer .footer2 li:hover{
+    transform: scale(1.1);
+}
+
+section#footer .footer2 li:hover a{
+    box-shadow: 0 0 10px white;
+    background-color: transparent;
+}
+
+section#footer .footer2 li a{
+    font: 500 18px sans-serif;
+    text-decoration: none;
+    color: white;
+}
+
+section#footer .footer3 a{
+    text-decoration: none;
+    color: white;
+    font: 500 18px sans-serif;
+}
+
+section#footer .footer3 h6{
+    font: 500 15px sans-serif;
+    margin-top: 15px;
+}
+
+section#footer .footer3 h3{
+    margin-bottom: 15px;
+}
+
+section#footer .footer4 p{
+    margin: 35px 0;
+    line-height: 25px;
+}
+
+section#footer .footer4 input{
+    padding: 15px;
+    background-color: rgb(32, 32, 32);
+    color: white;
+    font-size: 17px;
+    outline: none;
+    border: none;
+}
+
+section#footer .footer4 button{
+    font-size: 17px;
+    background-color: rgb(55, 0, 95);
+    color: white;
+    padding: 15px;
+    border: none;
+    font-weight: bold;
+}
+
+section#footer .footer4 form{
+    display: flex;
+}
+
 
 
 
@@ -1302,6 +1545,34 @@ section#contact{
         margin-top: 10px;
     }
 
+    section#contact .registr{
+        display: block;
+    }
+    
+    section#contact .registr input{
+        padding: 10px;
+        margin-bottom: 10px;
+        width: 100%;
+    }
+
+    section#contact form  button{
+        padding: 7px 20px;
+        font: 500 17px sans-serif;
+    }
+
+    section#want{
+        display: block;
+    }
+    
+    section#want h1{
+        font: 600 25px sans-serif;
+    }
+    
+    section#want .btn{
+        padding: 10px 20px;
+        font: 500 17px sans-serif;
+    }
+
 }
 
 
@@ -1457,6 +1728,34 @@ section#contact{
     section#ourPrice .our-cards .card{
         width: 100%;
     }
+
+    section#contact .registr{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 15px;
+        margin-top: 20px;
+    }
+
+    section#contact .registr input{
+        width: 100%;
+    }
+
+    section#contact .contact-info .footer-icons{
+        margin-top: 0px;
+    }
+
+    section#want{
+        display: block;
+    }
+    
+    section#want h1{
+        font: 600 25px sans-serif;
+    }
+    
+    section#want .btn{
+        padding: 13px 30px;
+        font: 500 17px sans-serif;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px){
@@ -1571,6 +1870,27 @@ section#contact{
         font: 500 15px sans-serif;
     }
 
+    section#contact .registr input{
+        width: 90%;
+    }
+
+    section#contact form textarea{
+        width: 375px;
+    }
+
+    section#want{
+        display: flex;
+    }
+    
+    section#want h1{
+        font: 600 25px sans-serif;
+    }
+    
+    section#want .btn{
+        padding: 13px 30px;
+        font: 500 17px sans-serif;
+    }
+
 }
 
 @media screen and (min-width:992px) and (max-width: 1200px){
@@ -1634,6 +1954,31 @@ section#contact{
     section#ourPrice .our-cards .card{
         width: 100%;
     }
+
+    section#contact .contact-info .footer-icons{
+        width: 40%;
+    }
+
+    section#contact .registr{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
+        margin-top: 20px;
+    }
+
+    section#want{
+        display: flex;
+    }
+    
+    section#want h1{
+        font: 600 30px sans-serif;
+    }
+    
+    section#want .btn{
+        padding: 15px 30px;
+        font: 500 27px sans-serif;
+    }
+    
 }
 
 @media screen and (min-width:1200px) and (max-width: 1400px){
